<resources>
    <string name="app_name">BIS</string>
    <string name="title_activity_main_activity">Bedside Identification System</string>
    <string name="add_patient">Add patient</string>
    <string name="list_of_patients">List of patients</string>
    <string name="identify_patient">Identify patient</string>
    <string name="add_patient_info">Add patient information here, those need to include full name and image taken from the front</string>
    <string name="patient_name">Patient full name</string>
    <string name="patient_illness">Known conditions patient is diagnosed with</string>
    <string name="patient_symptoms">Add patient\'s symptoms</string>
    <string name="patient_add_info"> Add patient\'s any additional information</string>
    <string name="add_button_text">Add</string>
    <string name="patient">Patient: %1$s</string>
    <string name="age">Age: %1$s years</string>
    <string name="sex">Sex: %1$s</string>
    <string name="conditions">Existing conditions: %1$s</string>
    <string name="symptoms">Symptoms: %1$s</string>
    <string name="add_info">Additional information: %1$s</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="edit_patient">Edit patient data</string>
    <string name="update_patient_record">update</string>
    <string name="recognise">Recognise patient</string>
    <string name="remove_patient_record">Remove patient</string>
    <string name="go_to_profile">Go to patient details</string>
    <string name="recognised_patient"> Recognised patient: %1$s \n with similarity: %2$s" </string>
</resources>